--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,6 +2,10 @@
   background-color: var(--background-color-light);
 }
 
+.team__list {
+  @extend %reset-list;
+}
+
 .team__item {
   background-color: var(--color-white);
   font-size: 16px;
