--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,10 +1,14 @@
 .social {
+  @extend %reset-list;
+
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
 }
 .social__link {
+  @extend %reset-link;
+
   display: flex;
   align-items: center;
   justify-content: center;
