--- a/sass/layout/_adress.scss
+++ b/sass/layout/_adress.scss
@@ -2,11 +2,17 @@
   font-style: normal;
 }
 
+.adress__list {
+  @extend %reset-list;
+}
+
 .adress__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
 .adress__link {
+  @extend %reset-link;
+
   color: rgba(255, 255, 255, 0.6);
 }
 .adress__link--white {
