--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,12 +11,16 @@
 }
 
 .header__contact-list {
+  @extend %reset-list;
+
   display: flex;
   margin-left: auto;
   gap: 50px;
 }
 
 .header__contact-link {
+  @extend %reset-link;
+
   display: flex;
   align-items: center;
   gap: 10px;
