--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -91,9 +91,7 @@
 }
 
 .modal-checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center();
   gap: 8px;
   margin-bottom: 30px;
   cursor: pointer;
