--- a/css/main.css
+++ b/css/main.css
@@ -79,11 +79,6 @@ img {
   padding-right: 15px;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .section__title {
   margin-bottom: 50px;
   font-size: 36px;
@@ -643,9 +638,12 @@ img {
   background-size: cover;
 }
 
+.feature {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .feature__wrapper-icon {
-  padding: 25px;
-  margin-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -655,6 +653,8 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 25px;
+  margin-bottom: 30px;
   background-color: var(--background-color-light);
 }
 
@@ -670,6 +670,8 @@ img {
 }
 
 .service {
+  padding-top: 94px;
+  padding-bottom: 94px;
   padding-top: 0;
 }
 
@@ -700,6 +702,8 @@ img {
 }
 
 .team {
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: var(--background-color-light);
 }
 
@@ -732,12 +736,16 @@ img {
   margin-bottom: 16px;
 }
 
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .clients__list {
   --items: 6;
 }
 
 .clients__link {
-  height: 92px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,6 +755,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  height: 92px;
   color: var(--color-icon);
   border: 1px solid currentColor;
   border-radius: 4px;
@@ -827,6 +836,11 @@ img {
 }
 .adress__link--active:hover, .adress__link--active:focus {
   color: var(--color-blue);
+}
+
+.portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .portfolio__filter {
