--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -18,9 +18,7 @@
   top: 8px;
   right: 8px;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center();
   width: 30px;
   height: 30px;
   padding: 0;
