--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,17 +1,14 @@
 .social {
   @extend %reset-list;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center();
   gap: 10px;
 }
 .social__link {
   @extend %reset-link;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center();
+
   width: 44px;
   height: 44px;
   border-radius: 50%;
