--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,3 +1,6 @@
+.clients {
+  @include section();
+}
 .clients__list {
   @extend %reset-list;
 
@@ -7,10 +10,9 @@
 .clients__link {
   @extend %reset-link;
 
+  @include flex-center();
   height: 92px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
   color: var(--color-icon);
   border: 1px solid currentColor;
   border-radius: 4px;
